dataset1235/2025-2/1153765216/users/230013788/executions/2747719322_2819779400.log
== RUN (2025-08-26 17:19:14)
-- CODE: 
qe = int(input("Quantidade de jogos a serem encomendados: "))
vu = float(input("Qual valor unitario de cada jogo: "))
vf = float(input("valor do frete: "))

ptotal = (vu*qe) + vfprint(round(ptotal , 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 17:20:25)
-- CODE: 
qe = int(input("Quantidade de jogos a serem encomendados: "))
vu = float(input("Qual valor unitario de cada jogo: "))
vf = float(input("valor do frete: "))

ptotal = (vu*qe) + vf
ptotal = (vu*qe) + vfprint(round(ptotal , 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 17:18:29)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
None
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
None
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
None
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
None
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
None
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:41:23)
-- CODE: 
qe = int(input("Quantidade de jogos a serem encomendados: "))
vu = float(input("Qual valor unitario de cada jogo: "))
vf = float(input("valor do frete: "))

ptotal = (vu*qe) + vf
print(round(ptotal , 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: Qual valor unitario de cada jogo: valor do frete: 1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: Qual valor unitario de cada jogo: valor do frete: 240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: Qual valor unitario de cada jogo: valor do frete: 540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: Qual valor unitario de cada jogo: valor do frete: 765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: Qual valor unitario de cada jogo: valor do frete: 162.6
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: Qual valor unitario de cada jogo: valor do frete: 618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:19:11)
-- CODE: 
qe = int(input("Quantidade de jogos a serem encomendados: "))
vu = float(input("Qual valor unitario de cada jogo: "))
vf = float(input("valor do frete: "))

ptotal = (vu*qe) + vfprint(round(ptotal , 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:20:23)
-- CODE: 
qe = int(input("Quantidade de jogos a serem encomendados: "))
vu = float(input("Qual valor unitario de cada jogo: "))
vf = float(input("valor do frete: "))

ptotal = (vu*qe) + vf
ptotal = (vu*qe) + vfprint(round(ptotal , 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal = (vu*qe) + vfprint(round(ptotal , 1))
                       ^^^^^^^
NameError: name 'vfprint' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 17:20:40)
-- CODE: 
qe = int(input("Quantidade de jogos a serem encomendados: ")
vu = float(input("Qual valor unitario de cada jogo: "))
vf = float(input("valor do frete: "))

ptotal = (vu*qe) + vf
ptotal = (vu*qe) + vfprint(round(ptotal , 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:20:39)
-- CODE: 
qe = int(input("Quantidade de jogos a serem encomendados: ")
vu = float(input("Qual valor unitario de cada jogo: "))
vf = float(input("valor do frete: "))

ptotal = (vu*qe) + vf
ptotal = (vu*qe) + vfprint(round(ptotal , 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 1
    qe = int(input("Quantidade de jogos a serem encomendados: ")
            ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:18:28)
-- CODE: 
qe = int(input("Quantidade de jogos a serem encomendados: "))
vu = float9input("Qual valor unitario de cada jogo: "))
vf = float(input("valor do frete: "))

ptotal = (vu*qe) + vfprint(round(ptotal , 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    vu = float9input("Qual valor unitario de cada jogo: "))
                                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    vu = float9input("Qual valor unitario de cada jogo: "))
                                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    vu = float9input("Qual valor unitario de cada jogo: "))
                                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    vu = float9input("Qual valor unitario de cada jogo: "))
                                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    vu = float9input("Qual valor unitario de cada jogo: "))
                                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    vu = float9input("Qual valor unitario de cada jogo: "))
                                                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
